--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -55,6 +55,9 @@ add_subdirectory(cpp/event/event_rec)
 add_subdirectory(cpp/event/event_snd)
 add_subdirectory(cpp/latency/latency_rec)
 add_subdirectory(cpp/latency/latency_snd)
+add_subdirectory(cpp/latency/roundtrip/sender)
+add_subdirectory(cpp/latency/roundtrip/receiver)
+add_subdirectory(cpp/latency/roundtrip/echo)
 add_subdirectory(cpp/minimal/minimal_rec)
 add_subdirectory(cpp/minimal/minimal_rec_cb)
 add_subdirectory(cpp/minimal/minimal_snd)
