--- a/test/Makefile
+++ b/test/Makefile
@@ -9,12 +9,11 @@ DEBUG_PARAMS = --cap-add=SYS_PTRACE --security-opt seccomp=unconfined
 all:  latency-single test-run
 
 bash:
-	cd ..
-	docker run --name ecal-$@ --rm -it -v `pwd`:/ecal ecal-src-build:${VER} /bin/bash
+	docker run --name ecal-$@ --rm -it -v `pwd`/../:/ecal ecal-src-build:${VER} /bin/bash
 
 latency-single:
 	cd ..
-	docker run --name ecal-$@-common -d --rm -v `pwd`:/ecal ecal-src-build:${VER} /ecal/build/bin/ecal_sample_latency_server
+	docker run --name ecal-$@-common -d --rm -v `pwd`/../:/ecal ecal-src-build:${VER} /ecal/build/bin/ecal_sample_latency_server
 	docker exec ecal-$@-common /ecal/build/bin/ecal_sample_latency_client
 	docker stop ecal-$@-common
 
@@ -34,19 +33,17 @@ echo_password=labview===
 test-deploy: deploy-sender deploy-receiver deploy-echo
 
 deploy-sender deploy-receiver deploy-echo:
-	cd ..
-	mkdir -p logs
+	mkdir -p ../logs
 	$(eval NAME := $(subst deploy-,,$@))
 	scp ../deploy.sh ../image-build-number.txt ${${NAME}_user}@${${NAME}}:~/
-	ssh -n ${${NAME}_user}@${${NAME}} '~/deploy.sh ${NAME}' | tee logs/remote${NAME}.log &
+	ssh -n ${${NAME}_user}@${${NAME}} '~/deploy.sh ${NAME}' | tee ../logs/remote${NAME}.log &
 
 
 # run echo first and then the receiver followed by sender on same or another machine
 receiver sender echo:
-	cd ..
-	mkdir -p logs
-	./setupRoute.sh
-	docker run --name ecal-$@-common -d ${NETWORK} ${DEBUG_PARAMS} --rm -v `pwd`:/ecal -v `pwd`/logs:/logs ecal-src-build:${VER} /ecal/test/run-common.sh $@
+	mkdir -p ../logs
+	../setupRoute.sh
+	docker run --name ecal-$@-common -d ${NETWORK} ${DEBUG_PARAMS} --rm -v `pwd`../:/ecal -v `pwd`/../logs:/logs ecal-src-build:${VER} /ecal/test/run-common.sh $@
 
 passwdless:
 	echo "${sender_password}" > /tmp/.sender.pwd
@@ -57,10 +54,9 @@ passwdless:
 test-run: echo-test receiver-test sender-test
 
 receiver-run sender-run echo-run:
-	cd ..
 	$(eval NAME := $(subst -run,,$@))
-	mkdir -p logs
-	rm -f logs/${NAME}.log
+	mkdir -p ../logs
+	rm -f ../logs/${NAME}.log
 	ssh ${${NAME}_user}@${${NAME}} 'cd ~/ecal/test && make ${NAME} '
 	sleep 3
 
