updated target bash

--- a/test/Makefile
+++ b/test/Makefile
@@ -6,6 +6,8 @@ NETWORK = --ipc=host --pid=host --network=host
 
 DEBUG_PARAMS = --cap-add=SYS_PTRACE --security-opt seccomp=unconfined
 
+SSH = ssh -t
+
 all:  latency-single test-run
 
 bash:
@@ -30,47 +32,50 @@ echo=simfarm15
 echo_user=abnsharm
 echo_password=labview===
 
-test-deploy: deploy-sender deploy-receiver deploy-echo
-
-deploy-sender deploy-receiver deploy-echo:
-	mkdir -p ../logs
-	$(eval NAME := $(subst deploy-,,$@))
-	scp ../deploy.sh ../image-build-number.txt ${${NAME}_user}@${${NAME}}:~/
-	ssh -n ${${NAME}_user}@${${NAME}} '~/deploy.sh ${NAME}' | tee ../logs/remote${NAME}.log &
-
-
-# run echo first and then the receiver followed by sender on same or another machine
-receiver sender echo:
-	mkdir -p ../logs
-	../setupRoute.sh
-	docker run --name ecal-$@-common -d ${NETWORK} ${DEBUG_PARAMS} --rm -v `pwd`../:/ecal -v `pwd`/../logs:/logs ecal-src-build:${VER} /ecal/test/run-common.sh $@
-
 passwdless:
 	echo "${sender_password}" > /tmp/.sender.pwd
 	echo "${echo_password}" > /tmp/.echo.pwd
 	ssh-copy-id ${sender_user}@${sender} < /tmp/.sender.pwd
 	ssh-copy-id ${echo_user}@${echo} < /tmp/.echo.pwd
 
-test-run: echo-test receiver-test sender-test
+test-deploy: deploy-sender deploy-receiver deploy-echo
+
+deploy-sender deploy-receiver deploy-echo:
+	mkdir -p ../logs
+	$(eval NAME := $(subst deploy-,,$@))
+	scp ../deploy.sh ../image-build-number.txt ${${NAME}_user}@${${NAME}}:~/
+	${SSH} ${${NAME}_user}@${${NAME}} '~/deploy.sh ${NAME}' | tee ../logs/remote${NAME}.log &
+
+# run echo first and then the receiver followed by sender on same or another machine
+receiver sender echo:
+	mkdir -p ../logs
+	rm -f ../logs/${NAME}.log
+	../setupRoute.sh
+	docker run --name ecal-$@-common -d ${NETWORK} ${DEBUG_PARAMS} --rm -v `pwd`../:/ecal -v `pwd`/../logs:/logs ecal-src-build:${VER} /ecal/test/run-common.sh $@
+
+test-run: receiver-run echo-run sender-run
 
 receiver-run sender-run echo-run:
 	$(eval NAME := $(subst -run,,$@))
-	mkdir -p ../logs
-	rm -f ../logs/${NAME}.log
-	ssh ${${NAME}_user}@${${NAME}} 'cd ~/ecal/test && make ${NAME} '
+	${SSH} ${${NAME}_user}@${${NAME}} 'cd ~/ecal/test && make ${NAME} '
 	sleep 3
 
 test-stop: echo-stop receiver-stop sender-stop
 
 sender-stop receiver-stop echo-stop:
 	$(eval NAME := $(subst -stop,,$@))
-	ssh ${${NAME}_user}@${${NAME}} 'docker stop ecal-${NAME}-common 2>&1 > /dev/null'
+	${SSH} ${${NAME}_user}@${${NAME}} 'docker stop ecal-${NAME}-common 2>&1 > /dev/null'
+
+sender-bash receiver-bash echo-bash:
+	$(eval NAME := $(subst -bash,,$@))
+	${SSH} ${${NAME}_user}@${${NAME}}  docker run --name ecal-${NAME}-bash -d ${NETWORK} ${DEBUG_PARAMS} --rm -v `pwd`../:/ecal -v `pwd`/../logs:/logs ecal-src-build:${VER} /bin/bash
+
 
 test-logs: sender-logs receiver-logs echo-logs
 
 sender-logs receiver-logs echo-logs:
 	$(eval NAME := $(subst -logs,,$@))
-	ssh ${${NAME}_user}@${${NAME}} 'tail -f ~/ecal/logs/$@.log'
+	${SSH} ${${NAME}_user}@${${NAME}} 'tail -f ~/ecal/logs/$@.log'
 
 list:
 	@grep '^[^#[:space:]].*:' Makefile
