--- a/test/Makefile
+++ b/test/Makefile
@@ -48,10 +48,10 @@ deploy-sender deploy-receiver deploy-echo:
 
 # run echo first and then the receiver followed by sender on same or another machine
 receiver sender echo:
-	mkdir -p ../logs
-	rm -f ../logs/${NAME}.log
-	../setupRoute.sh
-	docker run --name ecal-$@-common -d ${NETWORK} ${DEBUG_PARAMS} --rm -v `pwd`../:/ecal -v `pwd`/../logs:/logs ecal-src-build:${VER} /ecal/test/run-common.sh $@
+	mkdir -p ~/ecal/logs
+	rm -f ~/ecal/logs/${NAME}.log
+	~/ecal/setupRoute.sh
+	docker run --name ecal-$@-common -d ${NETWORK} ${DEBUG_PARAMS} --rm -v ~/ecal/:/ecal -v ~/ecal/logs:/logs ecal-src-build:${VER} /ecal/test/run-common.sh $@
 
 test-run: receiver-run echo-run sender-run
 
@@ -68,7 +68,7 @@ sender-stop receiver-stop echo-stop:
 
 sender-bash receiver-bash echo-bash:
 	$(eval NAME := $(subst -bash,,$@))
-	${SSH} ${${NAME}_user}@${${NAME}}  docker run --name ecal-${NAME}-bash -it ${NETWORK} ${DEBUG_PARAMS} --rm -v `pwd`../:/ecal -v `pwd`/../logs:/logs ecal-src-build:${VER} /bin/bash
+	${SSH} ${${NAME}_user}@${${NAME}} 'docker run --name ecal-${NAME}-bash -it ${NETWORK} ${DEBUG_PARAMS} --rm -v `pwd`/ecal/:/ecal -v `pwd`/ecal/logs:/logs ecal-src-build:${VER} /bin/bash
 
 
 test-logs: sender-logs receiver-logs echo-logs
