running as daemon now

--- a/localtests/Makefile
+++ b/localtests/Makefile
@@ -44,7 +44,7 @@ receiver sender echo:
 	mkdir -p ~/ecal/logs
 	rm -f ~/ecal/logs/${NAME}.log
 	~/ecal/setupRoute.sh
-	docker run --name ecal-$@-common -i ${NETWORK} ${DEBUG_PARAMS} --rm -v ~/ecal/:/ecal -v ~/ecal/logs:/logs ecal-install:${VER} /ecal/localtests/run-common.sh $@
+	docker run --name ecal-$@-common -d ${NETWORK} ${DEBUG_PARAMS} --rm -v ~/ecal/:/ecal -v ~/ecal/logs:/logs ecal-install:${VER} /ecal/localtests/run-common.sh $@
 
 test-run: receiver-run echo-run sender-run
 
