run roundtrip in same container

--- a/localtests/Makefile
+++ b/localtests/Makefile
@@ -40,11 +40,16 @@ bash:
 	${SSH} docker run --name ecal-$@ --rm -it -v `pwd`/../:/ecal ecal-install:${VER} /bin/bash
 
 # run echo first and then the receiver followed by sender on same or another machine
-receiver sender echo:
+receiver:
 	mkdir -p ~/ecal/logs
 	rm -f ~/ecal/logs/${NAME}.log
 	~/ecal/setupRoute.sh
-	docker run --name ecal-$@-common -d ${NETWORK} ${DEBUG_PARAMS} --rm -v ~/ecal/:/ecal -v ~/ecal/logs:/logs ecal-install:${VER} /ecal/localtests/run-common.sh $@
+	${RUN_CMD} --name ecal-common -d ${NETWORK} ${DEBUG_PARAMS} --rm -v ~/ecal/:/ecal -v ~/ecal/logs:/logs ecal-install:${VER} /ecal/localtests/run-common.sh $@
+
+sender echo:
+	mkdir -p ~/ecal/logs
+	rm -f ~/ecal/logs/$@.log
+	${EXEC_CMD} ecal-common /ecal/localtests/run-common.sh $@
 
 test-run: receiver-run echo-run sender-run
 
